--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                             <li><a href="#about">About me</a></li>
                             <li><a href="#contacts">Contacts</a></li>
                             <li><a href="#education">Education</a></li>
-                            <li><a>Skills</a></li>
-                            <li><a>Code Examples</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#code">Code Examples</a></li>
                             <li><a>Languages</a></li>
 
                         </ul>
@@ -60,7 +60,7 @@
             </div>
             <hr>
             <div id="education" class="education-section">
-                <section class="row-education">
+                <section class="row">
                     <article>Education</article>
                     <ul class="list-education">
                         <li>Minsk Radioengineering College</li> 
@@ -77,6 +77,50 @@
                 </section>
             </div>
             <hr>
+            <div id="skills" class="skills-section">
+                <section class="row">
+                    <article>Skills</article>
+                    <ul>
+                        <li class="skills-html"><span>HTML</span></li>
+                        <li class="skills-css"><span>CSS</span></li>
+                        <li class="skills-js"><span>JavaScript</span></li>
+                        <li class="skills-react"><span>React</span></li>
+                        <li class="skills-git"><span>GitHub</span></li>
+                        <li class="skills-python"><span>Python</span></li>
+                    </ul>
+
+                </section>
+
+            </div>
+            <hr>
+            <div id="code" class="code-section">
+                <section class="row">
+                    <article>Code Examples</article>
+                    <code>
+                        <pre>
+                            let user =  {  
+                                name:  "Liza", 
+                                age:  30,  
+                                sayHi()  {  
+                                    alert(this.name);
+                                }  
+                            }; 
+                            
+                            user.sayHi();  // Liza
+                        </pre>
+                    </code>
+                </section>
+            </div>
+            <hr>
+            <div id="lang" class="lang-section">
+                <section class="row"> 
+                    <article>Languages</article>
+                    <p>Russian - native speaker</p>
+                    <p>English - A2 (B1 in proccess)</p>
+                </section>
+            </div>
+            <hr>
+            
         </main>
     </body>
 </html>
