refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="page-content">
                 <div class="cover"> 
                     <figure>
-                        <img src="images\foto.jpg" alt="Фото">
+                        <img src="images/foto.jpg" alt="Фото">
                     </figure>
 
-                    <div class="navigation">
+                    <section class="navigation">
                         <h2>Elizaveta Shopik</h2>
                         <h3>Junior Frontend Developer</h3>
                         <nav>
@@ -36,21 +36,21 @@
                             </ul>
                         </nav>
 
-                    </div>
+                    </section>
                     
                 </div>
                 <div class="about-section">
-                    <div id="about" class="left-row">
-                        <article>About me</article>
-                        <section>I'm 23 y.o. I live in Minsk. 
+                    <section id="about" class="left-row">
+                        <article><h2 class="title">About me</h2></article>
+                        <div>I'm 23 y.o. I live in Minsk. 
                             My specialty is a teacher and a programmer. I've been working as a robotics and programming teacher for five years. 
                             I like to learn something new and exciting. That is why I`m here. 
                             My goal is to get knowledge and skills that will be enough for employment in a company.
-                        </section>
-                    </div>
-                    <div id="contacts" class="row-contacts">
-                        <article>Contacts</article>
-                        <section class="list-contacts">
+                        </div>
+                    </section>
+                    <section id="contacts" class="row-contacts">
+                        <article><h2 class="title">Contacts</h2></article>
+                        <div class="list-contacts">
                             <ul>
                                 <li>Address: Minsk, Belarus</li>
                                 <li>Phone: +375447721681</li>
@@ -58,13 +58,13 @@
                                 <li>GitHub: ElizavetaShopik</li>
                                 <li>Discord: Елизавета Шопик#2207</li>
                             </ul>
-                        </section>
-                    </div>
+                        </div>
+                    </section>
                 </div>
                 <hr>
                 <div id="education" class="education-section">
                     <section class="row">
-                        <article>Education</article>
+                        <article><h3 class="title">Education</h3></article>
                         <ul class="list-education">
                             <li>Minsk Radioengineering College</li> 
                             <li>Belarusian State University of Informatics and Radioelectronics</li>
@@ -82,7 +82,7 @@
                 <hr>
                 <div id="skills" class="skills-section">
                     <section class="row">
-                        <article>Skills</article>
+                        <article><h3 class="title">Skills</h3></article>
                         <ul>
                             <li class="skills-html"><span>HTML</span></li>
                             <li class="skills-css"><span>CSS</span></li>
@@ -98,7 +98,7 @@
                 <hr>
                 <div id="code" class="code-section">
                     <section class="row">
-                        <article>Code Examples</article>
+                        <article><h3 class="title">Code Examples</h3></article>
                         <pre>
                             <code class="js">
                                 let user =  {  
@@ -117,7 +117,7 @@
                 <hr>
                 <div id="lang" class="lang-section">
                     <section class="row"> 
-                        <article>Languages</article>
+                        <article><h3 class="title">Languages</h3></article>
                         <p>Russian - native speaker</p>
                         <p>English - A2 (B1 in proccess)</p>
                     </section>
