refactor: change structure of html

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                     
                 </div>
                 <div class="about-section">
-                    <section id="about" class="left-row">
+                    <div id="about" class="left-row">
                         <article><h2 class="title">About me</h2></article>
                         <div>I'm 23 y.o. I live in Minsk. 
                             My specialty is a teacher and a programmer. I've been working as a robotics and programming teacher for five years. 
                             I like to learn something new and exciting. That is why I`m here. 
                             My goal is to get knowledge and skills that will be enough for employment in a company.
                         </div>
-                    </section>
-                    <section id="contacts" class="row-contacts">
+                    </div>
+                    <div id="contacts" class="row-contacts">
                         <article><h2 class="title">Contacts</h2></article>
                         <div class="list-contacts">
                             <ul>
@@ -59,11 +59,11 @@
                                 <li>Discord: Елизавета Шопик#2207</li>
                             </ul>
                         </div>
-                    </section>
+                    </div>
                 </div>
                 <hr>
                 <div id="education" class="education-section">
-                    <section class="row">
+                    <div class="row">
                         <article><h3 class="title">Education</h3></article>
                         <ul class="list-education">
                             <li>Minsk Radioengineering College</li> 
@@ -77,11 +77,11 @@
                                 </ul>
                             </li>
                         </ul>
-                    </section>
+                    </div>
                 </div>
                 <hr>
                 <div id="skills" class="skills-section">
-                    <section class="row">
+                    <div class="row">
                         <article><h3 class="title">Skills</h3></article>
                         <ul>
                             <li class="skills-html"><span>HTML</span></li>
@@ -92,12 +92,12 @@
                             <li class="skills-python"><span>Python</span></li>
                         </ul>
 
-                    </section>
+                    </div>
 
                 </div>
                 <hr>
                 <div id="code" class="code-section">
-                    <section class="row">
+                    <div class="row">
                         <article><h3 class="title">Code Examples</h3></article>
                         <pre>
                             <code class="js">
@@ -112,15 +112,15 @@
                                 user.sayHi();  // Liza
                             </code>
                         </pre>
-                    </section>
+                    </div>
                 </div>
                 <hr>
                 <div id="lang" class="lang-section">
-                    <section class="row"> 
+                    <div class="row"> 
                         <article><h3 class="title">Languages</h3></article>
                         <p>Russian - native speaker</p>
                         <p>English - A2 (B1 in proccess)</p>
-                    </section>
+                    </div>
                 </div>
                 <hr>
                 <footer class="footer">
