feat: add My project

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                     </div>
                 </div>
                 <hr>
+                <div id="code" class="code-section">
+                    <div class="row">
+                        <article><h3 class="title">My project</h3></article>
+                        <a href="https://ElizavetaShopik.github.io/rsschool-cv/">RS School - CV</a>
+                    </div>
+                </div>
+                <hr>
                 <div id="lang" class="lang-section">
                     <div class="row"> 
                         <article><h3 class="title">Languages</h3></article>
